# agentiker-scout

./: .coveragerc  .gitignore  BRANCHING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  _fmt.py  coverage.json  plugin.yaml  pyproject.toml  pytest.ini  scout_tool_registry.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
analysis/: __init__.py  analysis_core.py  analysis_intent.py  analysis_profiles.py  analysis_session.py  analysis_tools.py  intent_helpers.py
analysis/tools/: __init__.py  arch_deadcode.py  base.py  diff_trend_watch.py  duplicates.py  framework_query_move.py  graph_patterns.py  graph_query.py  inspect.py  mapping.py  migration.py  perf_sec.py  report.py  review.py  schemas.py  schemas_data.json  test_insight.py  timeline.py  ui_discovery.py  ui_gap.py  ui_inspect.py
bughunt/: __init__.py  bughunt_core.py  bughunt_fix.py  bughunt_hooks.py  bughunt_patterns.py  bughunt_scanrunner.py  bughunt_tools.py
bughunt/core/: model.py  patterns.py  persistence.py  tracking.py
bughunt/data/: __init__.py  patterns_data.json  patterns_data.py
bughunt/tools/: base.py  history.py  patterns.py  scan.py  session.py
research/: __init__.py  research_core.py  research_hooks.py  research_tools.py
research/tools/: __init__.py  base.py  crud.py  export.py  schedule.py  search.py
scripts/: convert_semgrep_rules.py  convert_specfy_rules.py  generate_readme.py  install-deps.sh  pre-commit-hook
shared/: __init__.py  cache.py  dependency_scanner.py  framework_detector.py  honcho.py  intent.py  pattern_loader.py  patterns.py  patterns_research.py  registry.py  vulnerabilities.json  yaml_rule_loader.py
shared/detectors/: __init__.py  base.py  catalog.py  dependency_data.py  generic.py  loader.py  public.py
skills/: SKILL.md  framework-detection.md
tests/: _test_fmt_direct.py  conftest.py  test_auto_discovery.py  test_bughunt_init.py  test_dependency_scanner.py  test_dotenv_docker.py  test_eslint_patterns.py  test_framework_detector.py  test_honcho.py  test_honcho_error_paths.py  test_init.py  test_manual_patterns.py  test_owasp_patterns.py  test_pattern_loader.py  test_performance.py  test_semgrep_converter.py  test_shared_infra.py  test_yaml_rule_loader.py
tests/fakes/: __init__.py
tests/test_analysis/: test_analysis_core.py  test_analysis_phase_d.py  test_analysis_tools.py  test_ask.py  test_dependency_risk.py  test_diff_analysis.py  test_duplicates.py  test_e2e_converted.py  test_extractors.py  test_fmt.py  test_framework_query_move.py  test_graph_patterns.py  test_graph_query.py  test_init.py.old  test_integration.py  test_intent.py  test_mapping.py  test_migration.py  test_review.py  test_risk.py  test_test_insight.py  test_timeline.py  test_tools_base.py  test_ui_discovery.py  test_ui_gap.py  test_ui_inspect.py
tests/test_bughunt/: conftest.py  test_bughunt_patterns.py  test_core.py  test_coverage_gaps.py  test_e2e_converted.py  test_fix.py  test_hooks.py  test_hooks_coverage.py  test_mcp_devtools.py  test_patterns.py  test_persistence.py  test_scanrunner.py  test_shared_patterns.py  test_structure.py  test_tools_advanced.py  test_tools_basic.py  test_tools_error_paths.py  test_tools_mgmt.py  test_z_custom_patterns.py
tests/test_detectors/: test_base.py  test_catalog.py  test_dependency_data.py  test_generic.py  test_loader.py
(+26 files in other folders)
