[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "agentiker-scout"
version = "0.5.2"
description = "Unified analysis, bug-hunt, and web-research plugin with shared pattern pipeline for Hermes Agent"
authors = [
    {name = "Johannes Lettner"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "rich>=13.0",
    "PyYAML>=6.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
addopts = "-n auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "T", "W", "I"]
ignore = ["E501", "F403", "F405", "T201"]

[tool.coverage]
run = {source = [".", "shared", "analysis", "bughunt", "research"], omit = ["tests/*", "scripts/*", ".hermes/*"], relative_files = true}

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
