[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy._Backend"

[project]
name = "scout"
version = "0.5.12"
description = "Unified analysis, bug-hunt, and web-research plugin for Hermes Agent"
authors = [{ name = "agentiker" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "packaging>=23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["."]
relative_files = true
omit = ["tests/*", "scripts/*", ".hermes/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]
